--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Candid Chess"
+      content="Oh My Chess"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Candid Chess</title>
+    <title>Oh My Chess</title>
     <style>
       html { box-sizing: border-box; font-size: 16px; }
       *, *:before, *:after { box-sizing: inherit; }
